// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should correctly display intents 1`] = `
<div
  className="header"
>
  <div
    className="headerDetails"
  >
    <div
      className="author"
    >
      <CustomerLabel
        customer={
          Immutable.Map {
            "id": 1,
            "email": "john.doe@example.com",
            "name": "John Doe",
            "firstname": "John",
            "lastname": "Doe",
          }
        }
      />
    </div>
    <Meta
      integrationId={null}
      messageCreatedDatetime=""
      meta={null}
      ruleId={null}
      subject="Some subject"
      via="email"
    />
  </div>
  <div
    className="intents"
  >
    <Connect(IntentsFeedbackContainer)
      message={
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        }
      }
    />
  </div>
  <SourceDetailsHeader
    className="sourceDetails"
    isLastRead={false}
    isMessageDeleted={false}
    message={
      Object {
        "actions": null,
        "attachments": Array [],
        "channel": "email",
        "created_datetime": "",
        "external_id": null,
        "failed_datetime": null,
        "from_agent": false,
        "id": 1,
        "integration_id": null,
        "isMessage": true,
        "meta": null,
        "opened_datetime": null,
        "public": true,
        "receiver": Object {
          "email": "mary.poppins@example.com",
          "firstname": "Mary",
          "id": 2,
          "lastname": "Poppins",
          "name": "Mary Poppins",
        },
        "rule_id": null,
        "sender": Object {
          "email": "john.doe@example.com",
          "firstname": "John",
          "id": 1,
          "lastname": "Doe",
          "name": "John Doe",
        },
        "stripped_html": null,
        "stripped_signature": null,
        "stripped_text": null,
        "subject": "Some subject",
        "uri": "http://example.com/messages/1",
        "via": "email",
      }
    }
    timezone="America/Los_Angeles"
  />
</div>
`;

exports[`Header should display header 1`] = `
<div
  className="header"
>
  <div
    className="headerDetails"
  >
    <div
      className="author"
    >
      <CustomerLabel
        customer={
          Immutable.Map {
            "id": 1,
            "email": "john.doe@example.com",
            "name": "John Doe",
            "firstname": "John",
            "lastname": "Doe",
          }
        }
      />
    </div>
    <Meta
      integrationId={null}
      messageCreatedDatetime=""
      meta={null}
      ruleId={null}
      subject="Some subject"
      via="email"
    />
  </div>
  <SourceDetailsHeader
    className="sourceDetails"
    isLastRead={false}
    isMessageDeleted={false}
    message={
      Object {
        "actions": null,
        "attachments": Array [],
        "channel": "email",
        "created_datetime": "",
        "external_id": null,
        "failed_datetime": null,
        "from_agent": false,
        "id": 1,
        "integration_id": null,
        "isMessage": true,
        "meta": null,
        "opened_datetime": null,
        "public": true,
        "receiver": Object {
          "email": "mary.poppins@example.com",
          "firstname": "Mary",
          "id": 2,
          "lastname": "Poppins",
          "name": "Mary Poppins",
        },
        "rule_id": null,
        "sender": Object {
          "email": "john.doe@example.com",
          "firstname": "John",
          "id": 1,
          "lastname": "Doe",
          "name": "John Doe",
        },
        "stripped_html": null,
        "stripped_signature": null,
        "stripped_text": null,
        "subject": "Some subject",
        "uri": "http://example.com/messages/1",
        "via": "email",
      }
    }
    timezone="America/Los_Angeles"
  />
</div>
`;

exports[`Header should display header with metaContent = "Comment deleted on Facebook" 1`] = `
<div
  className="header"
>
  <div
    className="headerDetails"
  >
    <div
      className="author deletedMessage"
    >
      <CustomerLabel
        customer={
          Immutable.Map {
            "id": 1,
            "email": "john.doe@example.com",
            "name": "John Doe",
            "firstname": "John",
            "lastname": "Doe",
          }
        }
      />
    </div>
    <span
      className="deletedMessage ml-1"
    >
       
      Comment deleted on Facebook
    </span>
  </div>
  <SourceDetailsHeader
    className="sourceDetails"
    isLastRead={false}
    isMessageDeleted={true}
    message={
      Object {
        "actions": null,
        "attachments": Array [],
        "channel": "email",
        "created_datetime": "",
        "external_id": null,
        "failed_datetime": null,
        "from_agent": false,
        "id": 1,
        "integration_id": null,
        "isMessage": true,
        "meta": null,
        "opened_datetime": null,
        "public": true,
        "receiver": Object {
          "email": "mary.poppins@example.com",
          "firstname": "Mary",
          "id": 2,
          "lastname": "Poppins",
          "name": "Mary Poppins",
        },
        "rule_id": null,
        "sender": Object {
          "email": "john.doe@example.com",
          "firstname": "John",
          "id": 1,
          "lastname": "Doe",
          "name": "John Doe",
        },
        "stripped_html": null,
        "stripped_signature": null,
        "stripped_text": null,
        "subject": "Some subject",
        "uri": "http://example.com/messages/1",
        "via": "email",
      }
    }
    timezone="America/Los_Angeles"
  />
</div>
`;

exports[`Header should display header with metaContent = "Message hidden" 1`] = `
<div
  className="header"
>
  <div
    className="headerDetails"
  >
    <div
      className="author hiddenMessage"
    >
      <CustomerLabel
        customer={
          Immutable.Map {
            "id": 1,
            "email": "john.doe@example.com",
            "name": "John Doe",
            "firstname": "John",
            "lastname": "Doe",
          }
        }
      />
    </div>
    <span
      className="hiddenMessage ml-1"
    >
       
      Message hidden
    </span>
  </div>
  <SourceDetailsHeader
    className="sourceDetails"
    isLastRead={false}
    isMessageDeleted={false}
    message={
      Object {
        "actions": null,
        "attachments": Array [],
        "channel": "email",
        "created_datetime": "",
        "external_id": null,
        "failed_datetime": null,
        "from_agent": false,
        "id": 1,
        "integration_id": null,
        "isMessage": true,
        "meta": null,
        "opened_datetime": null,
        "public": true,
        "receiver": Object {
          "email": "mary.poppins@example.com",
          "firstname": "Mary",
          "id": 2,
          "lastname": "Poppins",
          "name": "Mary Poppins",
        },
        "rule_id": null,
        "sender": Object {
          "email": "john.doe@example.com",
          "firstname": "John",
          "id": 1,
          "lastname": "Doe",
          "name": "John Doe",
        },
        "stripped_html": null,
        "stripped_signature": null,
        "stripped_text": null,
        "subject": "Some subject",
        "uri": "http://example.com/messages/1",
        "via": "email",
      }
    }
    timezone="America/Los_Angeles"
  />
</div>
`;

exports[`Header should not display header with metaContent = "Message hidden" because the message is duplicated 1`] = `
<div
  className="header"
>
  <div
    className="headerDetails"
  >
    <div
      className="author"
    >
      <CustomerLabel
        customer={
          Immutable.Map {
            "id": 1,
            "email": "john.doe@example.com",
            "name": "John Doe",
            "firstname": "John",
            "lastname": "Doe",
          }
        }
      />
    </div>
    <Source
      createdDatetime=""
      id="some-header"
      isForwarded={false}
      source={
        Object {
          "from": Object {
            "address": "657788504429455-657788504429455",
            "name": "Page",
          },
          "to": Array [
            Object {
              "address": "657788504429455-4135481299826174",
              "name": "Cust Omer",
            },
          ],
          "type": "facebook-comment",
        }
      }
    />
    <Meta
      messageCreatedDatetime=""
      meta={
        Object {
          "hidden_datetime": "2020-06-18T14:10:14.291746",
          "is_duplicated": true,
          "private_reply": Object {
            "original_ticket_id": 1234,
          },
        }
      }
      source={
        Object {
          "from": Object {
            "address": "657788504429455-657788504429455",
            "name": "Page",
          },
          "to": Array [
            Object {
              "address": "657788504429455-4135481299826174",
              "name": "Cust Omer",
            },
          ],
          "type": "facebook-comment",
        }
      }
      subject="Some subject"
      via="facebook"
    />
  </div>
  <SourceDetailsHeader
    className="sourceDetails"
    isLastRead={false}
    isMessageDeleted={false}
    message={
      Object {
        "channel": "facebook",
        "created_datetime": "",
        "from_agent": false,
        "id": 1,
        "isMessage": true,
        "meta": Object {
          "hidden_datetime": "2020-06-18T14:10:14.291746",
          "is_duplicated": true,
          "private_reply": Object {
            "original_ticket_id": 1234,
          },
        },
        "public": true,
        "receiver": Object {
          "email": "mary.poppins@example.com",
          "firstname": "Mary",
          "id": 2,
          "lastname": "Poppins",
          "name": "Mary Poppins",
        },
        "sender": Object {
          "email": "john.doe@example.com",
          "firstname": "John",
          "id": 1,
          "lastname": "Doe",
          "name": "John Doe",
        },
        "source": Object {
          "from": Object {
            "address": "657788504429455-657788504429455",
            "name": "Page",
          },
          "to": Array [
            Object {
              "address": "657788504429455-4135481299826174",
              "name": "Cust Omer",
            },
          ],
          "type": "facebook-comment",
        },
        "subject": "Some subject",
        "uri": "http://example.com/messages/1",
        "via": "facebook",
      }
    }
    timezone="America/Los_Angeles"
  />
</div>
`;
